# interview-ai

./: .gitignore  README.md  docker-compose.yml  go.mod  go.sum
actions/: router.go
actions/health/: health.go  route.go
backend/: .env  main.py  pyproject.toml  requirements.txt
backend/api/: server.py
backend/api/routers/: auth.py  interview.py  llm.py  role.py  role_profile.py  skills.py
backend/api/schemas/: auth.py  common.py  interview.py  model.py  role_profile.py  skill_tree.py
backend/core/: auth.py  config.py  db.py  exception_handler.py  exceptions.py  llm_provider.py  logger.py  response.py  security.py
backend/models/: __init__.py  model_config.py  question.py  skill_tree.py  user.py
backend/pipelines/: pipeline.py  skill_extract.py  skill_to_questions.py
backend/prompts/: question_generate.prompt  skill_extract.prompt
backend/services/: __init__.py  model_config_service.py  role_profile.py  skill_node_service.py  user_service.py
boot/: boot.go  logger.go
boot/configloc/: resolve.go
cmd/server/: main.go
cmd/server/conf/: app.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: AvatarCropModal.vue  ProfileSettingsModal.vue
frontend/src/layout/: MainLayout.vue  Sidebar.vue
frontend/src/router/: index.ts
frontend/src/stores/: promptStore.ts
frontend/src/views/: Dashboard.vue  History.vue  Home.vue  Login.vue  Prompts.vue  PromptsCreate.vue  Settings.vue
routes/: routes.go
server/: app_context.go  app_server.go
(+10 files in other folders)
